fixed instructions alignment

--- a/styles.css
+++ b/styles.css
@@ -64,11 +64,12 @@ body{
 	text-align: center;
 }
 
-#instructions summary{
+summary{
 	font-size: 1.2rem;
+	text-align: center;
 }
 
-#instructions summary:focus{
+summary:focus{
 	outline: none;
 }
 
